mockup amzon finito

--- a/Amazon Page/amz.html
+++ b/Amazon Page/amz.html
@@ -3,8 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Amazon</title>
   </head>
-  <body></body>
+  <header>
+    <div class="bg-colorBlu">
+      <img class="logo" src="./assets/images/logo.png" alt="amz logo" />
+      <div class="horizontal-list bg-colorLightBlu textWhite">
+        <ul>
+          <li>All</li>
+          <li>Today's deals</li>
+          <li>Customer Service</li>
+          <li>Registry</li>
+          <li>Gift Cards</li>
+          <li>Sell</li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <body>
+    <div class="centrePage text-centre inBold">
+      <div class="textWhite">
+        <p class="bg-colorOrange p-distance">Shop All Holiday Gift Cards</p>
+      </div>
+      <div class="textWhite imgBg">
+        <h1>Holiday Gift Guides</h1>
+        <p>Be a go-gifter</p>
+      </div>
+      <div class="bg-colorWhite text-left">
+        <h3>Find the perfect gift <a href="#">Shop now</a></h3>
+      </div>
+      <div class="bg-colorWhite img-container1">
+        <img class="imgLine" src="./assets/images/img_1.jpg" alt="img1" />
+        <img class="imgLine" src="./assets/images/img_2.jpg" alt="img2" />
+        <img class="imgLine" src="./assets/images/img_3.jpg" alt="img3" />
+        <img class="imgLine" src="./assets/images/img_4.jpg" alt="img4" />
+      </div>
+      <div class="bottom-pad">
+        <img class="img-container2" src="./assets/images/img_9.png" alt="img9" />
+        <p>Play the gifting game <a href="#">Shop gaming</a></p>
+      </div>
+      <div class="bottom-pad">
+        <img class="img-container2" src="./assets/images/img_10.png" alt="img10" />
+        <p>The sound of cheer <a href="#">Shop Audio & Accessories</a></p>
+      </div>
+      <div class="bg-colorLightBlu back-to-top">
+        <p><a class="textWhite" href="#">Back to top</a></p>
+      </div>
+      <footer class="bg-colorBlu"><img class="logo-footer" src="./assets/images/logo.png" alt="" /></footer>
+    </div>
+  </body>
 </html>
